[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "provenance-gate-signer"
version = "0.1.5"
description = "Out-of-process Ed25519 signing extension that closes provenance-gate's in-process adversary gap"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "NeuralVault Contributors"}]
readme = "README.md"
dependencies = [
    "provenance-gate>=2.0.0",
]

# POSIX-only: the signer's security boundary is an AF_UNIX socket, which
# CPython does not expose on Windows (CPython #77589 open). macOS/BSD cap
# sun_path at 104 bytes (Linux 108). Validated against the PyPI trove
# classifier list.
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3 :: Only",
    "Typing :: Typed",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.0",
    "ruff>=0.5",
    "hypothesis>=6.0",
    "bandit>=1.7",
]

[tool.setuptools]
packages = ["provenance_gate_signer"]
[tool.pytest.ini_options]
testpaths = ["provenance_gate_signer/tests"]
addopts = "--cov=provenance_gate_signer --cov-report=term-missing --cov-fail-under=90"

[tool.coverage.run]
source = ["provenance_gate_signer"]
omit = ["*/tests/*"]

[tool.coverage.report]
exclude_lines = ["pragma: no cover", "raise NotImplementedError", "if TYPE_CHECKING:"]

[tool.mypy]
python_version = "3.10"
strict = true
files = ["provenance_gate_signer"]
exclude = "tests"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "C4", "SIM", "RUF"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"provenance_gate_signer/tests/*" = ["SIM300", "B011"]
